--- a/homework1/styles/style.less
+++ b/homework1/styles/style.less
@@ -16,8 +16,9 @@ h3 {
 }
 
 p {
-    color: #333333;
+    color: #333;
     font: 400 16px/24px Arial;
+    text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);
 }
 
 .container {
@@ -54,10 +55,7 @@ p {
             .headerList {
                 margin: 47px 0 0 35px;
                 list-style-image: url(../img/headerListIcon.png);
-
                 li {
-                    text-decoration: none;
-                    text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);
                     color: #ffffff;
                     font: normal 20px/36px Arial, sans-serif;
                 }
@@ -106,6 +104,15 @@ p {
             text-align: center;
             h2 {
                 padding-top: 50px;
+            }
+            .productFeatureWrap ul {
+                margin-left: 91px;
+                list-style-image: url(../img/featureMarker.png);
+                li {
+                    float: left;
+                    text-align: left;
+                    width: 560px;
+                }
             }
         }
         .productScreenshotsArticle {
@@ -172,51 +179,57 @@ p {
         }
         .productPriceArticle {
             width: @width;
-            height: 656px;
+            height: 655px;
             background-color: #fff;
-            position: relative;
-            &>* {
-                position: absolute;
-                bottom: 0;
-                margin-bottom: 50px;
-            }
-            &>h2 {
-                position: inherit;
-                text-align: center;
-            }
             h2 {
+                text-align: center;
                 padding-top: 50px;
-                padding-bottom: 35px;
+                margin-bottom: 25px;
             }
-            .priceArticle {
-                width: 300px;
-                background-color: #445162;
-                h3 {
-                    color: #fff;
-                    text-align: center;
-                }
-                .priceAmount {
+            .priceArticleWrap {
+                height: 545px;
+                display: flex;
+                align-items: flex-end;
+                justify-content: center;
+                .priceArticle {
                     width: 300px;
-                    height: 50px;
-                    background-color: #fff;
-                    color: #445162;
-                    font: normal 40px/30px 'Arial';
-                    text-align: center;
-                }
-                ol {
-                    margin: 19px 0 19px 20px;
-                    li {
-                    margin-left: 20px;
-                    color: #ffffff;
-                    font: normal 14px/24px 'Arial';
+                    margin: 0 45px 50px 0;
+                    background-color: #445162;
+                    h3 {
+                        color: #fff;
+                        text-align: center;
+                        line-height: 50px;
+                    }
+                    .priceAmount {
+                        width: 300px;
+                        background-color: #fff;
+                        color: #445162;
+                        font: normal 40px/30px 'Arial';
+                        text-align: center;
+                        line-height: 70px;
+                        vertical-align: middle;
+                    }
+                    ol {
+                        margin: 20px 0 0 20px;
+                        li {
+                        margin-left: 20px;
+                        color: #ffffff;
+                        font: normal 14px/24px 'Arial';
+                        }
+                    }
+                    button {
+                        width: 260px;
+                        height: 40px;
+                        line-height: 40px;
+                        margin: 20px;;
+                        background-color: #fff;
+                        color: #445161;
+                        font: bold 18px/18px 'Arial';
+                        text-transform: uppercase;
                     }
                 }
-                button {
-                    width: 260px;
-                    height: 40px;
-                    line-height: 40px;
-                    margin: 20px;;
-                    background-color: #fff;
+                .luxPrice {
+                    margin-right: 0;
                 }
             }
         }
@@ -226,5 +239,7 @@ p {
 
 
 .contacts {
-
+    height: 510px;
+    background-color: #445162;
+    text-align: center;
 }
