--- a/homework1/styles/style.css
+++ b/homework1/styles/style.css
@@ -221,3 +221,55 @@ p {
   background-color: #445162;
   text-align: center;
 }
+.contacts h2 {
+  color: #fff;
+  padding-top: 50px;
+  padding-bottom: 30px;
+}
+.contacts .contactsFormWrap {
+  display: flex;
+  justify-content: center;
+}
+.contacts .contactsFormWrap .contactsForm {
+  flex-basis: 500px;
+  height: 355px;
+  margin-right: 45px;
+  display: flex;
+  flex-direction: column;
+}
+.contacts .contactsFormWrap .contactsForm form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.contacts .contactsFormWrap .contactsForm form input[name="name"],
+.contacts .contactsFormWrap .contactsForm form input[name="email"] {
+  height: 40px;
+}
+.contacts .contactsFormWrap .contactsForm form textarea {
+  height: 160px;
+}
+.contacts .contactsFormWrap .contactsForm form input[name="submit"] {
+  width: 140px;
+  height: 40px;
+}
+.contacts .contactsFormWrap .contactsForm form * {
+  width: 490px;
+  margin-bottom: 20px;
+  color: #445162;
+  font: bolder 16px/24px 'Arial';
+  padding-left: 10px;
+  border-radius: 5px;
+}
+.contacts .contactsFormWrap .contactsInfo {
+  flex-basis: 230px;
+}
+.contacts .copyright {
+  margin-top: 20px;
+}
+.contacts .copyright p {
+  background-color: #f5f5f5;
+  color: #445162;
+  font: normal 12px/24px 'Arial';
+  line-height: 24px;
+}
