--- a/homework1/styles/style.less
+++ b/homework1/styles/style.less
@@ -236,10 +236,61 @@ p {
     }
 }
 
-
-
 .contacts {
     height: 510px;
     background-color: #445162;
     text-align: center;
+    h2 {
+        color: #fff;
+        padding-top: 50px;
+        padding-bottom: 30px;
+    }
+    .contactsFormWrap {
+        display: flex;
+        justify-content: center;
+        .contactsForm {
+            flex-basis: 500px;
+            height: 355px;
+            margin-right: 45px;
+            display: flex;
+            flex-direction: column;
+            & form {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                input[name="name"],
+                input[name="email"] {
+                    height: 40px;
+                }
+                textarea {
+                    height: 160px;
+                }
+                input[name="submit"] {
+                    width: 140px;
+                    height: 40px;
+                }
+                * {
+                    width: 490px;
+                    margin-bottom: 20px;
+                    color: #445162;
+                    font: bolder 16px/24px 'Arial';
+                    padding-left: 10px;
+                    border-radius: 5px;
+                }
+                
+            }
+        }
+        .contactsInfo {
+            flex-basis: 230px;
+        }
+    }
+    .copyright {
+        margin-top: 20px;
+        p {
+            background-color: #f5f5f5;
+            color: #445162;
+            font: normal 12px/24px 'Arial';
+            line-height: 24px;
+        }
+    }
 }
