--- a/homework1/styles/style.less
+++ b/homework1/styles/style.less
@@ -277,11 +277,25 @@ p {
                     padding-left: 10px;
                     border-radius: 5px;
                 }
-                
             }
         }
         .contactsInfo {
             flex-basis: 230px;
+            text-align: left;
+            .contactOption {
+                display: flex;
+                align-items: flex-start;
+                margin-bottom: 18px;
+                p {
+                    color: #fff;
+                    font: bolder 16px/24px 'Arial';
+                    margin-left: 5px;
+                }
+            }
+            .socialButtons img {
+                width: 240px;
+                margin-top: 14px;
+            }
         }
     }
     .copyright {
