--- a/homework1/styles/style.less
+++ b/homework1/styles/style.less
@@ -275,10 +275,6 @@ p {
                 textarea {
                     height: 160px;
                 }
-                input[name="submit"] {
-                    width: 140px;
-                    height: 40px;
-                }
                 * {
                     width: 490px;
                     margin-bottom: 20px;
@@ -286,6 +282,11 @@ p {
                     font: bolder 16px/24px 'Arial';
                     padding-left: 10px;
                     border-radius: 5px;
+                }
+                input[name="submit"] {
+                    width: 140px;
+                    height: 40px;
+                    padding: 0;
                 }
             }
         }
