Переделал по результатам проверки: корректировки article --> div там где нет заголовка, убрал закрывающие слэши в одиночных тегах input

--- a/homework1/styles/style.less
+++ b/homework1/styles/style.less
@@ -105,16 +105,14 @@ p {
             h2 {
                 padding: 50px 0 25px 0;
             }
-            .productFeatureWrap1,
-            .productFeatureWrap2,
-            .productFeatureWrap3 {
+            .productFeatureWrap {
                 display: flex;
                 justify-content: center; 
                 .feature {
                     flex-basis: 590px;
                     text-align: left;
                     display: flex;
-                    margin-bottom: 35px;
+                    margin: 0 15px 35px 0;
                     img {
                         width: 32px;
                         height: 32px;
