--- a/homework1/styles/style.css
+++ b/homework1/styles/style.css
@@ -89,29 +89,21 @@ p {
 .product main .productFeatureArticle h2 {
   padding: 50px 0 25px 0;
 }
-.product main .productFeatureArticle .productFeatureWrap1,
-.product main .productFeatureArticle .productFeatureWrap2,
-.product main .productFeatureArticle .productFeatureWrap3 {
+.product main .productFeatureArticle .productFeatureWrap {
   display: flex;
   justify-content: center;
 }
-.product main .productFeatureArticle .productFeatureWrap1 .feature,
-.product main .productFeatureArticle .productFeatureWrap2 .feature,
-.product main .productFeatureArticle .productFeatureWrap3 .feature {
+.product main .productFeatureArticle .productFeatureWrap .feature {
   flex-basis: 590px;
   text-align: left;
   display: flex;
-  margin-bottom: 35px;
+  margin: 0 15px 35px 0;
 }
-.product main .productFeatureArticle .productFeatureWrap1 .feature img,
-.product main .productFeatureArticle .productFeatureWrap2 .feature img,
-.product main .productFeatureArticle .productFeatureWrap3 .feature img {
+.product main .productFeatureArticle .productFeatureWrap .feature img {
   width: 32px;
   height: 32px;
 }
-.product main .productFeatureArticle .productFeatureWrap1 .feature p,
-.product main .productFeatureArticle .productFeatureWrap2 .feature p,
-.product main .productFeatureArticle .productFeatureWrap3 .feature p {
+.product main .productFeatureArticle .productFeatureWrap .feature p {
   margin: -4px 0 0 9px;
 }
 .product main .productScreenshotsArticle {
