Добавил sans-serif к стилям шрифтов

--- a/homework1/styles/style.css
+++ b/homework1/styles/style.css
@@ -4,21 +4,21 @@ html * {
 }
 h2 {
   color: #445161;
-  font: bold 30px/36px Arial;
+  font: bold 30px/36px 'Arial', sans-serif;
 }
 h3 {
   color: #445161;
-  font: 400 24px/30px Arial;
+  font: 400 24px/30px 'Arial', sans-serif;
 }
 p {
   color: #333;
-  font: 400 16px/24px Arial;
+  font: 400 16px/24px 'Arial', sans-serif;
   text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);
 }
 .container > * {
   margin: 0 auto;
   width: 1280px;
-  font-family: Arial, sans-serif;
+  font-family: 'Arial', sans-serif;
   background-color: #f5f5f5;
 }
 .product .header {
@@ -36,7 +36,7 @@ p {
   margin-top: -4px;
   text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);
   color: #ffffff;
-  font: bold 60px/60px Arial, sans-serif;
+  font: bold 60px/60px 'Arial', sans-serif;
   font-size: 60px;
   font-weight: 400;
 }
@@ -46,7 +46,7 @@ p {
 }
 .product .header .headerArticle .headerList li {
   color: #ffffff;
-  font: normal 20px/36px Arial, sans-serif;
+  font: normal 20px/36px 'Arial', sans-serif;
 }
 .product .header .headerImage {
   width: 469px;
@@ -72,7 +72,7 @@ p {
 }
 .product main .aboutProductArticle .aboutProductArticleText h2 {
   color: #445161;
-  font: bold 30px/36px Arial;
+  font: bold 30px/36px 'Arial', sans-serif;
   margin-bottom: 30px;
 }
 .product main .aboutProductArticle .aboutProductArticleText p {
@@ -198,7 +198,7 @@ p {
   width: 300px;
   background-color: #fff;
   color: #445162;
-  font: normal 40px/30px 'Arial';
+  font: normal 40px/30px 'Arial', sans-serif;
   text-align: center;
   line-height: 70px;
   vertical-align: middle;
@@ -209,7 +209,7 @@ p {
 .product main .productPriceArticle .priceArticleWrap .priceArticle ol li {
   margin-left: 20px;
   color: #ffffff;
-  font: normal 14px/24px 'Arial';
+  font: normal 14px/24px 'Arial', sans-serif;
 }
 .product main .productPriceArticle .priceArticleWrap .priceArticle button {
   width: 260px;
@@ -218,7 +218,7 @@ p {
   margin: 20px;
   background-color: #fff;
   color: #445161;
-  font: bold 18px/18px 'Arial';
+  font: bold 18px/18px 'Arial', sans-serif;
   text-transform: uppercase;
 }
 .product main .productPriceArticle .priceArticleWrap .luxPrice {
@@ -261,7 +261,7 @@ p {
   width: 490px;
   margin-bottom: 20px;
   color: #445162;
-  font: bolder 16px/24px 'Arial';
+  font: bolder 16px/24px 'Arial', sans-serif;
   padding-left: 10px;
   border-radius: 5px;
 }
@@ -281,7 +281,7 @@ p {
 }
 .contacts .contactsFormWrap .contactsInfo .contactOption p {
   color: #fff;
-  font: bolder 16px/24px 'Arial';
+  font: bolder 16px/24px 'Arial', sans-serif;
   margin-left: 5px;
 }
 .contacts .contactsFormWrap .contactsInfo .socialButtons img {
@@ -294,6 +294,6 @@ p {
 .contacts .copyright p {
   background-color: #f5f5f5;
   color: #445162;
-  font: normal 12px/24px 'Arial';
+  font: normal 12px/24px 'Arial', sans-serif;
   line-height: 24px;
 }
