--- a/homework1/styles/style.less
+++ b/homework1/styles/style.less
@@ -7,17 +7,17 @@ html * {
 
 h2 {
     color: #445161;
-    font: bold 30px/36px Arial;
+    font: bold 30px/36px 'Arial', sans-serif;
 }
 
 h3 {
     color: #445161;
-    font: 400 24px/30px Arial;
+    font: 400 24px/30px 'Arial', sans-serif;
 }
 
 p {
     color: #333;
-    font: 400 16px/24px Arial;
+    font: 400 16px/24px 'Arial', sans-serif;
     text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);
 }
 
@@ -25,7 +25,7 @@ p {
     &>* {
         margin: 0 auto;
         width: @width;
-        font-family: Arial, sans-serif;
+        font-family: 'Arial', sans-serif;
         background-color: #f5f5f5;
     }
 }
@@ -47,7 +47,7 @@ p {
                 margin-top: -4px;
                 text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);
                 color: #ffffff;
-                font: bold 60px/60px Arial, sans-serif;
+                font: bold 60px/60px 'Arial', sans-serif;
                 font-size: 60px;
                 font-weight: 400;
             }
@@ -57,7 +57,7 @@ p {
                 list-style-image: url(../img/headerListIcon.png);
                 li {
                     color: #ffffff;
-                    font: normal 20px/36px Arial, sans-serif;
+                    font: normal 20px/36px 'Arial', sans-serif;
                 }
             }
         }
@@ -87,7 +87,7 @@ p {
                 padding: 50px 0 0 50px;
                 h2 {
                     color: #445161;
-                    font: bold 30px/36px Arial;
+                    font: bold 30px/36px 'Arial', sans-serif;
                     margin-bottom: 30px;
                 }
                 p {
@@ -212,7 +212,7 @@ p {
                         width: 300px;
                         background-color: #fff;
                         color: #445162;
-                        font: normal 40px/30px 'Arial';
+                        font: normal 40px/30px 'Arial', sans-serif;
                         text-align: center;
                         line-height: 70px;
                         vertical-align: middle;
@@ -222,7 +222,7 @@ p {
                         li {
                         margin-left: 20px;
                         color: #ffffff;
-                        font: normal 14px/24px 'Arial';
+                        font: normal 14px/24px 'Arial', sans-serif;
                         }
                     }
                     button {
@@ -232,7 +232,7 @@ p {
                         margin: 20px;;
                         background-color: #fff;
                         color: #445161;
-                        font: bold 18px/18px 'Arial';
+                        font: bold 18px/18px 'Arial', sans-serif;
                         text-transform: uppercase;
                     }
                 }
@@ -277,7 +277,7 @@ p {
                     width: 490px;
                     margin-bottom: 20px;
                     color: #445162;
-                    font: bolder 16px/24px 'Arial';
+                    font: bolder 16px/24px 'Arial', sans-serif;
                     padding-left: 10px;
                     border-radius: 5px;
                 }
@@ -297,7 +297,7 @@ p {
                 margin-bottom: 18px;
                 p {
                     color: #fff;
-                    font: bolder 16px/24px 'Arial';
+                    font: bolder 16px/24px 'Arial', sans-serif;
                     margin-left: 5px;
                 }
             }
@@ -312,7 +312,7 @@ p {
         p {
             background-color: #f5f5f5;
             color: #445162;
-            font: normal 12px/24px 'Arial';
+            font: normal 12px/24px 'Arial', sans-serif;
             line-height: 24px;
         }
     }
