--- a/homework2/styles/style.less
+++ b/homework2/styles/style.less
@@ -183,7 +183,7 @@ main {
 				width: calc(0.5*@width - 64px);
 				padding-bottom: 24px;
 				img {
-					height: 75px;
+					max-height: 75px;
 				}
 				.userReview {
 					background: url(../img/reviewBgr.png) no-repeat;
