--- a/homework2/styles/media.css
+++ b/homework2/styles/media.css
@@ -1,3 +1,20 @@
+@media (max-width: 1280px) {
+  main .feature .featureBoxWrap,
+  main .screenshot .screenshotBoxWrap,
+  main .review .reviewBoxWrap {
+    flex-flow: column;
+    align-items: center;
+  }
+  main .feature .featureBoxWrap .featureBox:nth-last-child(2) {
+    padding-bottom: 35px;
+  }
+  main .screenshot .screenshotBoxWrap .screenshotBox:nth-last-child(2) {
+    padding-bottom: 35px;
+  }
+  main .review .reviewBoxWrap .reviewBox:nth-last-child(2) {
+    padding-bottom: 24px;
+  }
+}
 @media (max-width: 900px) {
   .header {
     flex-flow: column;
@@ -9,10 +26,7 @@
   .header .headerImage {
     margin-left: 0;
   }
-  main .about,
-  main .feature .featureBoxWrap,
-  main .screenshot .screenshotBoxWrap,
-  main .review .reviewBoxWrap {
+  main .about {
     flex-flow: column;
     align-items: center;
   }
@@ -25,15 +39,6 @@
   main .about .aboutLeft p {
     text-align: justify;
     padding-right: 0;
-  }
-  main .feature .featureBoxWrap .featureBox:nth-last-child(2) {
-    padding-bottom: 35px;
-  }
-  main .screenshot .screenshotBoxWrap .screenshotBox:nth-last-child(2) {
-    padding-bottom: 35px;
-  }
-  main .review .reviewBoxWrap .reviewBox:nth-last-child(2) {
-    padding-bottom: 24px;
   }
 }
 @media (max-width: 800px) {
@@ -94,5 +99,8 @@
   h2 {
     font-size: 26px;
     max-width: calc(-19vp);
+  }
+  .contacts .contactsFormWrap .contactsForm form {
+    width: 100%;
   }
 }
