--- a/homework2/styles/media.less
+++ b/homework2/styles/media.less
@@ -1,3 +1,36 @@
+@media (max-width: 1280px) {
+	main {
+		.feature .featureBoxWrap,
+		.screenshot .screenshotBoxWrap,
+		.review .reviewBoxWrap {
+			flex-flow: column;
+			align-items: center;
+		}
+		.feature {
+			.featureBoxWrap {
+				.featureBox:nth-last-child(2) {
+					padding-bottom: 35px;
+				}
+			}
+		}
+		.screenshot {
+			.screenshotBoxWrap {
+				.screenshotBox:nth-last-child(2) {
+					padding-bottom: 35px;
+				}
+			}
+		}
+
+		.review {
+			.reviewBoxWrap {
+				.reviewBox:nth-last-child(2) {
+					padding-bottom: 24px;
+				}
+			}
+		}
+	}
+}
+
 @media (max-width: 900px) {
 	.header {
 		flex-flow: column;
@@ -14,10 +47,7 @@
 
 	main {
 
-		.about,
-		.feature .featureBoxWrap,
-		.screenshot .screenshotBoxWrap,
-		.review .reviewBoxWrap {
+		.about {
 			flex-flow: column;
 			align-items: center;
 		}
@@ -33,30 +63,6 @@
 				p {
 					text-align: justify;
 					padding-right: 0;
-				}
-			}
-		}
-
-		.feature {
-			.featureBoxWrap {
-				.featureBox:nth-last-child(2) {
-					padding-bottom: 35px;
-				}
-			}
-		}
-
-		.screenshot {
-			.screenshotBoxWrap {
-				.screenshotBox:nth-last-child(2) {
-					padding-bottom: 35px;
-				}
-			}
-		}
-
-		.review {
-			.reviewBoxWrap {
-				.reviewBox:nth-last-child(2) {
-					padding-bottom: 24px;
 				}
 			}
 		}
@@ -135,6 +141,7 @@
 	body {
 		width: 1vp;
 	}
+
 	.header {
 		.headerTop {
 			padding: 0 20px;
@@ -150,5 +157,15 @@
 	h2 {
 		font-size: 26px;
 		max-width: calc(1vp - 20px);
+	}
+
+	.contacts {
+		.contactsFormWrap {
+			.contactsForm {
+				& form {
+					width: 100%;
+				}
+			}
+		}
 	}
 }
