--- a/homework2/styles/style.css
+++ b/homework2/styles/style.css
@@ -160,14 +160,31 @@ main .review .reviewBoxWrap .reviewBox img {
   max-height: 75px;
 }
 main .review .reviewBoxWrap .reviewBox .userReview {
-  background: url(../img/reviewBgr.png) no-repeat;
+  position: relative;
 }
-main .review .reviewBoxWrap .reviewBox .userReview p {
-  margin: 8px 20px 15px 27px;
+main .review .reviewBoxWrap .reviewBox .userReview .citeAddon {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 30px;
+  left: 20px;
+  transform: rotate(45deg);
+  background-color: #ebebeb;
+}
+main .review .reviewBoxWrap .reviewBox .userReview .cite {
+  margin-left: 32px;
+  background-color: #ebebeb;
+  box-sizing: border-box;
+  border-radius: 6px;
+}
+main .review .reviewBoxWrap .reviewBox .userReview .cite p {
+  margin: 0 20px 0 15px;
+  padding-top: 12px;
   font: italic 14px/18px 'Arial', sans-serif;
 }
-main .review .reviewBoxWrap .reviewBox .userReview .author {
+main .review .reviewBoxWrap .reviewBox .userReview .cite .author {
   color: #989898;
+  padding-bottom: 12px;
 }
 main .review .reviewBoxWrap .reviewBox:last-child,
 main .review .reviewBoxWrap .reviewBox:nth-last-child(2) {
@@ -249,13 +266,15 @@ main .price .priceWrap .priceBox:last-child {
 }
 .contacts .contactsFormWrap .contactsForm form input[name="name"],
 .contacts .contactsFormWrap .contactsForm form input[name="email"] {
+  width: 100%;
   height: 40px;
 }
 .contacts .contactsFormWrap .contactsForm form textarea {
-  max-height: 160px;
+  min-height: 160px;
+  width: 100%;
 }
 .contacts .contactsFormWrap .contactsForm form * {
-  width: 490px;
+  max-width: 100%;
   margin-bottom: 20px;
   color: #445162;
   font: bolder 16px/24px 'Arial', sans-serif;
