--- a/homework2/styles/style.less
+++ b/homework2/styles/style.less
@@ -186,13 +186,30 @@ main {
 					max-height: 75px;
 				}
 				.userReview {
-					background: url(../img/reviewBgr.png) no-repeat;
-					p {
-						margin: 8px 20px 15px 27px;
-						font: italic 14px/18px 'Arial', sans-serif;
+					position: relative;
+					.citeAddon {
+						position: absolute;
+						width: 20px;
+						height: 20px;
+						top: 30px;
+						left: 20px;
+						transform: rotate(45deg);
+						background-color: #ebebeb;
 					}
-					.author {
-						color: #989898;
+					.cite {
+						margin-left: 32px;
+						background-color: #ebebeb;
+						box-sizing: border-box;
+						border-radius: 6px;
+						p {
+							margin: 0 20px 0 15px;
+							padding-top: 12px;
+							font: italic 14px/18px 'Arial', sans-serif;
+						}
+						.author {
+							color: #989898;
+							padding-bottom: 12px;
+						}
 					}
 				}
 			}
@@ -285,15 +302,17 @@ main {
 
 				input[name="name"],
 				input[name="email"] {
+					width: 100%;
 					height: 40px;
 				}
 
 				textarea {
-					max-height: 160px;
+					min-height: 160px;
+					width: 100%;
 				}
 
 				* {
-					width: 490px;
+					max-width: 100%;
 					margin-bottom: 20px;
 					color: #445162;
 					font: bolder 16px/24px 'Arial', sans-serif;
