--- a/homework2/styles/media.css
+++ b/homework2/styles/media.css
@@ -74,6 +74,13 @@
     border-style: double;
     border-color: #445162;
     margin: 0 0 50px 0;
+    text-align: center;
+  }
+  main .price .priceWrap .priceBox ol {
+    display: inline-block;
+    margin: 0 auto;
+    margin-top: 20px;
+    text-align: left;
   }
   main .price .priceWrap .priceBox .priceAmount {
     max-width: 100%;
@@ -83,7 +90,17 @@
   }
 }
 @media (max-width: 600px) {
-  .container > * {
+  .container .header {
+    padding: 50px 20px;
+  }
+  .container main .about,
+  .container main .feature,
+  .container main .screenshot,
+  .container main .review,
+  .container main .price {
+    padding: 50px 20px;
+  }
+  .container footer .contacts {
     padding: 50px 20px;
   }
   body {
@@ -124,6 +141,9 @@
   }
   main .price .priceWrap .priceBox {
     width: 100%;
+  }
+  .contacts .contactsFormWrap {
+    padding: inherit 0;
   }
   .contacts .contactsFormWrap .contactsForm {
     width: 100%;
