Вставил видео из youtube

--- a/homework2/styles/style.less
+++ b/homework2/styles/style.less
@@ -100,9 +100,9 @@ main {
 			}
 		}
 
-		.aboutRight video[poster] {
-			object-fit: cover;
-		}
+		// .aboutRight video[poster] {
+		// 	object-fit: cover;
+		// }
 	}
 
 	.feature {
