--- a/homework2/styles/media.css
+++ b/homework2/styles/media.css
@@ -40,6 +40,13 @@
     text-align: justify;
     padding-right: 0;
   }
+  main .about .aboutRight {
+    width: 100%;
+    height: 60%;
+  }
+  main .about .aboutRight iframe {
+    width: 100%;
+  }
 }
 @media (max-width: 800px) {
   main .price .priceWrap {
