--- a/homework2/styles/media.less
+++ b/homework2/styles/media.less
@@ -65,6 +65,14 @@
 					padding-right: 0;
 				}
 			}
+			.aboutRight {
+				width: 100%;
+				height: 60%;
+				iframe {
+					width: 100%;
+					// height: 60%;
+				}
+			}
 		}
 	}
 }
