--- a/homework2/styles/style.css
+++ b/homework2/styles/style.css
@@ -68,7 +68,6 @@ main {
 main > * {
   margin: -50px -50px 50px -50px;
   padding: 50px;
-  overflow: none;
   background-color: #fff;
 }
 main .about {
@@ -154,7 +153,8 @@ main .review .reviewBoxWrap .reviewBox {
   padding-bottom: 24px;
 }
 main .review .reviewBoxWrap .reviewBox img {
-  max-height: 75px;
+  width: 75px;
+  height: 75px;
 }
 main .review .reviewBoxWrap .reviewBox .userReview {
   position: relative;
