--- a/homework2/styles/style.less
+++ b/homework2/styles/style.less
@@ -1,4 +1,11 @@
-@font-face {font-family:"Socialico";src:url("../fonts/Socialico.eot") format("eot"),url("../fonts/Socialico.woff") format("woff"),url("../fonts/Socialico.ttf") format("truetype"),url("../fonts/Socialico.svg") format("svg");font-weight:normal;font-style:normal;}
+@font-face {
+	font-family:"Socialico";
+	src:	url("../fonts/Socialico.eot") format("eot"),
+				url("../fonts/Socialico.woff") format("woff"),
+				url("../fonts/Socialico.ttf") format("truetype"),
+				url("../fonts/Socialico.svg") format("svg");
+				font-weight:normal;
+				font-style:normal;}
 
 @width: 1280px;
 
