--- a/homework3-1/styles/style.less
+++ b/homework3-1/styles/style.less
@@ -1,26 +1,55 @@
 body {
 	padding: 0;
 	margin: 0;
-	min-height: 200vh;
 	overflow-x: hidden;
-	video,
-	.videoIn {
-		height: 100vh;
-		width: 100vw;
-		object-fit: cover;
-		object-position: center center;
-	}
-	.videoIn {
-		background-color: #000;
-		position: absolute;
-		top: 0;
-		left: 0;
-		z-index: 2;
-		opacity: 0.6;
+	background-color: rgba(66, 51, 51, 0.5);
+	.bgVideo {
+		z-index: 1;
+		video,
+		.videoIn {
+			height: 100vh;
+			width: 100vw;
+			object-fit: cover;
+			object-position: center center;
+		}
+		.videoIn {
+			background-color: #000;
+			position: absolute;
+			top: 0;
+			left: 0;
+			z-index: 2;
+			opacity: 0.6;
+		}
 	}
 }
-main {
+
+.header {
+	z-index: 2;
+	position: absolute;
+	top: calc(0.15 * 100vh);
+	left: calc(0.25 * 100vw);
+}
+
+.formReg {
+	padding: 20px;
+	border-radius: 10px;
+	background-color: rgba(42, 42, 42, 0.5);
+	color: #fff;
+}
+
+.carouselMain {
+	margin-top: -6px;
+	max-height: 100vh;
+}
+
+.footer {
+	line-height: 20px;
+}
+
+@media (max-width: 576px) {
 	.header {
-		color: red;
+		top: calc(0.05 * 100vh);
+		left: 0;
 	}
 }
+
